# PJC2025

./: .gitignore  CMakeLists.txt  PJC2025.sln  PJC2025.vcxproj  PJC2025.vcxproj.filters  Path.h  README.md  Simulation.h  Vehicle.cpp  Vehicle.h  classdiagram.md  main.cpp  old.cpp  resource.h  utils.cpp  utils.h  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
html/: annotated.html  annotated_dup.js  class_intersection-members.html  class_intersection.html  class_intersection.js  class_network-members.html  class_network.html  class_network.js  class_segment-members.html  class_segment.html  class_vertex-members.html  class_vertex.html  class_vertex.js  class_vertex_group-members.html  class_vertex_group.html  class_vertex_group.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js  resource_8h_source.html  struct_edge-members.html  struct_edge.html  struct_edge.js  utils_8h_source.html
html/search/: all_1.js  all_2.js  all_4.js  all_9.js  classes_4.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js
latex/: annotated.tex  class_intersection.tex  class_network.tex  class_segment.tex  class_vertex.tex  class_vertex_group.tex  files.tex  refman.tex  resource_8h_source.tex  struct_edge.tex  utils_8h_source.tex
src/: main.cpp
src/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Junction.cpp  Junction.h  Network.cpp  Network.h  Node.cpp  Node.h  Path.h  Segment.cpp  Segment.h  Simulation.h  Vehicle.cpp  Vehicle.h  VehicleGenerator.h  Vertex.cpp  Vertex.h  Waypoint.cpp  Waypoint.h
src/network/: Intersection.cpp  Intersection.h  Leg.cpp  Leg.h  Network.cpp  Network.h  Segment.cpp  Segment.h
src/simulation/: Simulation.cpp  Simulation.h
src/utils/: Angle.cpp  Angle.h  QuadBezier.cpp  QuadBezier.h  config.h  utils.cpp  utils.h
src/vehicles/: Path.cpp  Path.h  Vehicle.cpp  Vehicle.h  VehicleGenerator.cpp
